# fastapi-base

./: .gitignore  pyproject.toml
alembic/: env.py
scripts/: start_gunicorn.sh
src/: bootstrap.py  main.py  middlewares.py  routers.py
src/apps/v1/: __init__.py
src/apps/v1/healthcheck/: router.py  schemas.py  use_cases.py
src/apps/v1/healthcheck/services/: __init__.py  db_check_service.py  protocols.py
src/core/: config.py  gunicorn_config.py  pagination.py  schemas.py
src/core/middlewares/: __init__.py  requests_log.py
src/core/repositories/: exceptions.py
src/core/repositories/sqla/: base_repository.py  exceptions.py
src/core/utils/: exceptions.py
src/db/: base.py  db_service.py
src/db/mixins/postgres/: __init__.py  timestamps.py  uuid_pk.py
