[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["onehandedpirate <plagueismkii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"
gunicorn = "^23.0.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["alembic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
