[project]
name = "fastapi-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]
